Changing the order of instantiated products to match aws images